--- a/sae_vis/css/general.css
+++ b/sae_vis/css/general.css
@@ -1,10 +1,10 @@
 /* Styling of the top-level container */
 .grid-container {
     font-family: 'system-ui';
-    /*border: 1px solid #e6e6e6;*/
+    border: 1px solid #e6e6e6;
     background-color: #fff;
     margin: 30px 10px;
-    /*box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);*/
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
     display: grid;
     justify-content: start;
     grid-template-columns: auto;
